[workspace]
resolver = "2"
members = [
    "sentinel-core",
    "sentinel-edge",
    "sentinel-neural",
    "sentinel-behavior",
    "sentinel-response",
    "sentinel-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/adoslabsproject-gif/cerbero-waf"
authors = ["Nicola Cucurachi <ados.labsproject@gmail.com>"]
description = "AI-native Web Application Firewall — prompt injection detection, rate limiting, behavioral analysis"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full", "tracing"] }
tokio-stream = "0.1"

# HTTP
axum = { version = "0.8", features = ["http2", "tracing"] }
hyper = { version = "1.6", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database & Cache
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "cluster-async"] }

# Concurrent data structures
dashmap = "6.0"
crossbeam = "0.8"
parking_lot = "0.12"

# ML Inference
ort = { version = "2.0.0-rc.11" }
ndarray = "0.16"

# Cryptography
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
sha2 = "0.10"
base64 = "0.22"

# Utilities
uuid = { version = "1.11", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IP & Network
ipnetwork = "0.20"
maxminddb = "0.24"

# Text processing
regex = "1.11"
once_cell = "1.20"
unicode-normalization = "0.1"

# Embedded database (ban persistence)
rusqlite = { version = "0.31", features = ["bundled"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Testing
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
