[package]
name = "sentinel-behavior"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sentinel-core = { path = "../sentinel-core" }
tokio = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
