[package]
name = "sentinel-response"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sentinel-core = { path = "../sentinel-core" }
tokio = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chrono = "0.4"

[dev-dependencies]
tokio-test = { workspace = true }
