[package]
name = "sentinel-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
sentinel-edge = { path = "../sentinel-edge" }
sentinel-neural = { path = "../sentinel-neural" }
sentinel-behavior = { path = "../sentinel-behavior" }
sentinel-response = { path = "../sentinel-response" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
